# SimpleTimer

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  SimpleTimer.c  SimpleTimer.h  SimpleTimerWP.c  SimpleTimerWP.h  SimpleTimer_version.h  mainDemo_stopwatch.c  mainExampleDemo_stopwatch.c  mainXDemo_ForTimerRegisteredCallbacks.c
OldVersion/: CMakeLists.txt  SimpleTimer.c  SimpleTimer.cpp  SimpleTimer.h  mainExampleDemo_stopwatch.c
Tests/: ConsoleMenuOptions.h  EqualCheck.c  EqualCheck.h  MultiThreadSupport.c  MultiThreadSupport.h  type_def.h
Tests/Test8bitTimer/: CMakeLists.txt  MultiThread_Template_main.c
Tests/UnitTest/: CMakeLists.txt  MultiThread_Template_main.c
UnitTest/: CMakeLists.txt  ConsoleMenuOptions.c  MultiThreadSupport.c  MultiThread_Template_main.c  type_def.h
